@@ -5,6 +5,7 @@ version 0.5
 	Added Prefix/Suffix matching to filterbots - Specify p'<prefix>' or s'<suffix>' in useragents file to use this feature
 	Added comment support for filterbots useragents/ips files - use '#' in start of line
 	Added qps utility - Parse timestamps from log stream and calculate qps over sliding time window
+	Added JSONParser to parsing module, can now use JSON-formatted logs e.g for logmerge, logparse etc.
 	
 version 0.4
 	Added unit-testing for logtools.parsers module
